Patch 0.1
À partir de maintenant je ferai des commits quand il y aura un nouveau patch (à part si obliger)