@@ -9,12 +9,12 @@ import org.bukkit.inventory.ItemStack;
 import org.bukkit.potion.PotionEffect;
 import org.bukkit.potion.PotionEffectType;
 
-import fr.cel.cachecache.manager.CCArena;
+import fr.cel.cachecache.manager.arena.CCArena;
 import fr.cel.cachecache.manager.GroundItem;
 
 public class SpeedItem extends GroundItem {
 
-    private static List<String> lores = Arrays.asList("Cet objet vous permet d'avoir vitesse II pendant 5 secondes.");
+    private static final List<String> lores = List.of("Cet objet vous permet d'avoir vitesse II pendant 5 secondes.");
 
     public SpeedItem() {
         super("speedItem", Material.SUGAR, "Vitesse", lores, 1);
